[project]
name = "langgraph-cb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langsmith>=0.6.4",
    "notebook>=7.5.2",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
]
